# meta-learning-for-everyone

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  env_test.py  launch.py  pyproject.toml  requirements-common.txt  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.cfg  setup.py  test.py  train.py  window-init.sh
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-issue-template.md  bug_report.md  feature-request-template.md  feature_request.md
.github/workflows/: codeql.yml  pull-request.yml  python.yml  stale-issue.yml
configs/: halfcheetah-dir.yaml
envs/: __init__.py
envs/mujoco/: humanoid.py
envs/utils/: wrappers.py
hooks/: install.sh
maml/: maml_trainer.py  trainer.py
maml/algorithm/: buffer.py  maml.py  meta_learner.py  networks.py  ppo.py  sampler.py
maml/configs/: cheetah_dir.py  cheetah_vel.py  experiment_config.yaml  vel_target_config.yaml
maml/envs/: __init__.py  half_cheetah_dir.py  half_cheetah_vel.py
maml/pybullet_envs/: env_bases.py  half_cheetah_dir.py  half_cheetah_vel.py
meta_rl/algorithms/: maml_trpo.py
meta_rl/baselines/: linear_baseline.py
meta_rl/buffers/: replay_buffer.py  simple_buffer.py
meta_rl/core/: __init__.py  logger.py
meta_rl/envs/: __init__.py  ant.py  ant_dir.py  ant_goal.py  ant_multitask_base.py  half_cheetah.py  half_cheetah_dir.py  half_cheetah_vel.py  humanoid_dir.py  mujoco_env.py  wrappers.py
meta_rl/policies/: base.py  gaussian_policy.py
meta_rl/samplers/: in_place.py  util.py
pearl/: trainer.py
pearl/algorithm/: __init__.py  buffers.py  meta_learner.py  metalearner.py  networks.py  pearl.py  sac.py  sampler.py  samplers.py  utils.py
rl2/: rl2_trainer.py  trainer.py
scripts/: download-torch.py  install.sh  window-init.bat  window-init.sh
(+159 files in other folders)
