#
# According to PEP-518, https://www.python.org/dev/peps/pep-0518/
#
[build-system]
# Minimum requirements for the build system to execute, according to PEP-508
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "meta-learning-for-everyone"
version = "0.1.0"
description = "A repository for the book 'Meta-Learning for Everyone'"
authors = ["dongminlee94 <kid33629@gmail.com>", "Clyde21c <shlee21@postech.ac.kr>"]
license = "Apache License"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
autopep8 = "1.5.0"
GPUtil = "1.4.0"
gym = "0.24.1"
imageio = ">=2.1.2"
jupyter = "1.0.0"
jupyter-contrib-nbextensions = "0.5.1"
jupyter-nbextensions-configurator = "0.4.1"
matplotlib = ">=3.5.2"
mujoco = "2.2.0"
tqdm = ">=4.62.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "3.8.4"
isort = "5.10.1"
nbqa = "1.3.1"
pylint = "2.7.3"
pytest = "6.2.2"
pytest-flake8 = "1.0.6"
pytest-pylint = "0.18.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 104
target-version = ["py37", "py38"]
exclude = ""

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ""
